Ported all dictionaries to json. Added infrastructure to read JSON files from within the core.